fixed responsiveness bug on mobiles

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,12 +2,16 @@ body {
     height: 100vh;
     position: relative;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 .cover-container {
     z-index: 2;
     max-width: 60vw;
     position: relative;
+    min-height: 70vh;
+    padding: 2rem;
+    box-sizing: border-box;
 }
 
 #bgVideo {
@@ -16,10 +20,12 @@ body {
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     z-index: 1;
     transform: translate(-50%, -50%);
+    overflow: hidden;
+    object-fit: cover;
 }
 
 .nav-link {
